[Curate-Lifestyle] Various Fixes and Small Feats to Curate Lifestyle Page
Summary:

- Made the Referral and Tell me more button's colours invert dynamically when cursor hovers
- Aligned buttons left text
- Updated Referral Button Text to include PDF download text
- Fixed bug where Curate Lifestyle overlapped with image
- Aligned Exclamation Mark
- Contact Us Box Alignment

Testing: Locally verified all changes

Ticket:

Reviewers: Wajdy

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,21 @@
 }
 
 .li-exclamation-mark {
-  list-style-image: url("../public/images/exclamation-mark.svg");
+  list-style: none;
+  position: relative;
+}
+
+.li-exclamation-mark::before {
+  content: "";
+  background-image: url("../public/images/exclamation-mark.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 16px;
+  height: 26px;
+  position: absolute;
+  left: -20px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .li-checkmark-dark-green {
